crates/codira_codegen/src/snapshots/codira_codegen__test__shadowing.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func foo(a:i32) -> i32 {\n        let a = a+1;\n        {\n            let a = a+2;\n        }\n        a+3\n    }\n\n    public func bar(a:i32) -> i32 {\n        let a = a+1;\n        let a = {\n            let a = a+2;\n            a\n        }\n        a+3\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i32 @foo(i32 %0) local_unnamed_addr #0 {
body:
  %add7 = add i32 %0, 4
  ret i32 %add7
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i32 @bar(i32 %0) local_unnamed_addr #0 {
body:
  %add9 = add i32 %0, 6
  ret i32 %add9
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
