crates/codira_codegen/src/snapshots/codira_codegen__test__shift_op_u8.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func leftshift(a: u8, b: u8) -> u8 { a << b }\n    public func rightshift(a: u8, b: u8) -> u8 { a >> b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i8 @leftshift(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %left_shift = shl i8 %0, %1
  ret i8 %left_shift
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i8 @rightshift(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %right_shift = lshr i8 %0, %1
  ret i8 %right_shift
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
